# Realtime-Synthetic-Call-Center-Agents

./: .gitignore  AGENT_ORCHESTRATION_FIXES.md  CHANGELOG.md  CLEANUP_SUMMARY.md  Networking.md  README.md  azure.yaml  deploy-log.txt  start-local-dev.cmd  start-local-dev.ps1  status-local-dev.ps1  stop-local-dev.ps1
src/backend/: Admin.py  Dockerfile  Dockerfile.fastapi  README_API.md  check_requirements.py  load_azd_env.py  main.py  pyproject.toml  requirements.txt  test_conversation_manager.py  test_email_logic_app.py  util.py
src/backend/agents/: __init__.py  assistant_agent.py  database_agent.py  internal_kb.py  root.py  web_search_agent.py
src/backend/api/: main.py  main_backup.py  main_test.py
src/backend/api/routes/: admin.py  realtime.py  websocket.py
src/backend/api/websocket/: connection_manager.py  realtime_handler.py  voice_session.py
src/backend/assets/Cosmos_Customer/: 0_David_Ingram.json  0_Kevin_Brown.json  0_Xander_Garcia.json  1_Fiona_Parker.json  1_Oliver_Brown.json  (+3 more)
src/backend/pages/: 01_Ingest_Data.py  01_Ingest_Documents.py  02_Delete_Documents.py  03_Synthesize_Data.py  04_VoiceBot_Classic.py  05_VoiceBot_Handover.py  05_VoiceBot_MultiAgent.py  05_VoiceBot_Realtime.py  README_Realtime.md
src/backend/routes/: admin.py
src/backend/services/: assistant_service.py  conversation_logger.py
src/backend/tests/: test_assistant_service.py
src/backend/utils/: __init__.py  agent_common.py  conversation_manager.py  data_synthesizer.py  disabled_VoiceBot_Realtime.py  evaltest.py  file_processor.py  performance_metrics.py  realtime_voice_utils.py  streamlit_ui_common.py  voicebot_classic_chat.py  voicebot_classic_config.py  voicebot_classic_database.py  voicebot_classic_email.py  voicebot_classic_geolocation.py  voicebot_classic_tools.py  voicebot_common.py  whats_app_location.py
src/backend/websocket/: realtime_handler.py
(+152 files in other folders)
