[project]
name = "agentic-voice-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "azure-search-documents==11.6.0b8",
    "azure-storage-blob",
    "azure-identity",
    "numpy",
    "python-dotenv",
    "rich",
    "streamlit",
    "azure-monitor-opentelemetry",
    "openai>=1.64.0",
    "azure-cosmos>=4.9.0",
    "azure-keyvault",
    "audio_recorder_streamlit",
    "streamlit-webrtc>=0.47.1",
    "av>=10.0.0",
    "websockets>=12.0",
    "aiofiles>=23.0.0",
]
