[project]
name = "agentic-voice-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "azure-search-documents==11.6.0b8",
    "azure-storage-blob",
    "azure-identity",
    "numpy",
    "python-dotenv",
    "rich>=13.0.0",
    "azure-monitor-opentelemetry",
    "openai>=1.64.0",
    "azure-cosmos>=4.9.0",
    "azure-keyvault-secrets",
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.20",
    "azure-core>=1.33.0",
    "azure-search>=1.0.0b2",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
